--- a/discord.html
+++ b/discord.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Redirecting to Discord</title>
+</head>
 <body onload="discord()">
+  <script>
+    function discord() {
+      window.location.href = "https://discord.gg/hvN87SzK8R";
+    }
+  </script>
 </body>
-<script>
-  function discord() {
-  window.location.open = "https://discord.gg/hvN87SzK8R"
-  }
-</script>
+</html>
