--- a/discord.html
+++ b/discord.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirecting to Discord</title>
+  <title>Discord - shadowrealm.xyz</title>
 </head>
 <body onload="discord()">
+  <a href="https://discord.gg/hvN87SzK8R"><h1> Click me if it doesn't Redirect</h1></a>
   <script>
     function discord() {
       window.location.href = "https://discord.gg/hvN87SzK8R";
